--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>Something to see.</p>
 <p>Verifing <a href=page.html>A link.</a></p>
+<p>Trying an emacs org document <a href=plan.org>A plan.</a></p>
